--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -78,5 +78,11 @@
     "lessonType": "Lesson Type",
     "date": "Date",
     "from": "From",
-    "to": "To"
+    "to": "To",
+    "yourSchool": "Your School",
+    "schooly": "Schooly",
+    "inYourBucket": "In your bucket",
+    "digitalTeachingIsFuture": "Digital teaching is the future",
+    "schoolyIsLinkWithAi": "is linking between you and your school with modern AI technologies.",
+    "startNow": "Start Now!"
 }
