--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -78,5 +78,7 @@
     "lessonType": "نوع الجلسة",
     "date": "التاريخ",
     "from": "من",
-    "to": "الى"
+    "to": "الى",
+    "yourClasses": "فصولك الدراسية",
+    "hello": "مرحبًا 👋"
 }
