--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -98,5 +98,16 @@
     "resetPasswordTitle":"Reset Password",
     "confirmPassword":"Confirm Password",
     "newPassword":"New Password",
-    "resetPassword":"Reset password"
+    "resetPassword":"Reset password",
+    "resendCodeNow": "Resend Code Now",
+    "checkCode": "Check the code",
+    "checkPhoneContent": "Check your mobile messages and enter the code sent through the following boxes:",
+    "resendCode": "Send the code again after {seconds}",
+    "@resendCode": {
+        "placeholders": {
+            "seconds": {
+                "type": "String"
+            }
+        }
+    }
 }
