add linking posts and comments

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -109,5 +109,9 @@
                 "type": "String"
             }
         }
-    }
+    },
+    "comments":"التعليقات",
+    "addComment":"اضافة تعليق",
+    "noComments":"لا يوجد تعليقات"
+    
 }
