--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -109,5 +109,8 @@
                 "type": "String"
             }
         }
-    }
+    },
+    "comments":"Comments",
+    "addComment":"Add comment",
+    "noComments":"No Comments"
 }
