add  session design

--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -135,7 +135,8 @@
     "homeworkSolution":"حل واجب",
     "practice":"حل تمارين",
     "revision":"مراجعة",
-    "other":"اخرى"
+    "other":"اخرى",  "choose": "اختر {value}",
+    "sessionTitle": "عنوان الجلسة"
 }
 
     
