--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -135,7 +135,11 @@
     "practice":"Practice",
     "revision":"Revision",
     "other":"Other",
-    "explanation":"Explanation"
- 
+    "explanation":"Explanation",
+      "choose": "Choose {value}"
+
+ ,"sessionTitle":
+ "Session Title"
+
 
 }
