--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -138,7 +138,8 @@
     "explanation":"Explanation",
     "choose": "Choose {value}",
     "sessionTitle":"Session Title",
-    "noHomework": "There are no assignments at the moment"
+    "noHomework": "There are no assignments at the moment",
+    "waitingForOthersToJoin":"Waiting for others to join"
 
 
 }
