--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -141,7 +141,29 @@
     "noHomework": "There are no assignments at the moment",
     "waitingForOthersToJoin":"Waiting for others to join",
     "successfullyDownloaded":"Successfully downloaded", 
-    "downloading":"Downloading"
+    "downloading":"Downloading",
+     "downloadHomework":"Download",
+    "submitHomework": "Submit",
+    "pleaseChooseFile":"Please choose a File",
+    "homeworkUploaded":"Homework uploaded",
+    "chooseFile" :"Choose file",
+    "fileUploadedSuccesfully" :"File Uploaded Successfully",
+    "failedUpload" :"Failed to Upload",
+    "deadline":"Deadline",
+    "submittedHomeworks":"Submitted Homeworks",
+    "noSubmittedHomeworksYet":"No Homeworks Submitted Yet !",
+    "submitted":"Submitted",
+    "notSubmitted": "Not Submitted",
+    "active":"Active",
+    "completed":"Completed",
+    "fileName":"file name",
+    "studentName": "Student Name",
+    "submitDate":"Submitted at",
+    "posts" :"Posts",
+    "homeworks":"Homeworks",
+    "sessions":"Sessions",
+    "lesson" :"Lesson",
+    "resubmitHomework": "Re-Submit"
 
 
 }
