--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -166,7 +166,29 @@
     "resubmitHomework": "Re-Submit",
     "more":"More",
     "logout": "Logout",
-    "profile": "Profile"
+    "profile": "Profile",
+    "changeLanguage": "Change Language",
+    "noUpcomingClasses": "There are no upcoming classes yet",
+    "titlePrefix": "Mr.",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone Number",
+    "birthDate": "Date of Birth",
+    "gender": "Gender",
+    "role": "Role",
+    "grade": "Grade",
+    "address": "Address",
+    "update": "Update",
+    "female": "Female",
+    "male": "Male",
+    "notAvailable": "Not Available",
+    "student": "Student"
+
+
+
+
+
+
 
 
 }
