--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -94,7 +94,7 @@
     "settings": "Settings",
     "sendChangeLink":"Send change link",
     "changePassword":"Change Password",
-    "doYouWantToLogIn?":"Do you want to log in?",
+    "doYouWantToLogIn":"Do you want to log in?",
     "resetPasswordTitle":"Reset Password",
     "confirmPassword":"Confirm Password",
     "newPassword":"New Password",
