--- a/lib/core/localization/app_ar.arb
+++ b/lib/core/localization/app_ar.arb
@@ -169,7 +169,8 @@
     "waitingForOthersToJoin":"بانتظار الاخرين حتى ينضموا",
     "changeLanguage": "تغيير اللغة",
     "noUpcomingClasses": "لا توجد حصص قادمة بعد",
-    "titlePrefix": "أ.",
+    "titlePrefixMr": "أ.",
+    "titlePrefixMrs": "أ.",
     "name": "الاسم",
     "email": "البريد الإلكتروني",
     "phone": "رقم الهاتف",
