--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -169,7 +169,8 @@
     "profile": "Profile",
     "changeLanguage": "Change Language",
     "noUpcomingClasses": "There are no upcoming classes yet",
-    "titlePrefix": "Mr.",
+    "titlePrefixMr": "Mr.",
+    "titlePrefix": "Mrs.",
     "name": "Name",
     "email": "Email",
     "phone": "Phone Number",
