--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -183,7 +183,10 @@
     "female": "Female",
     "male": "Male",
     "notAvailable": "Not Available",
-    "student": "Student"
+    "student": "Student",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "passwordRequired": "Password is required"
+
 
 
 
