--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -170,7 +170,7 @@
     "changeLanguage": "Change Language",
     "noUpcomingClasses": "There are no upcoming classes yet",
     "titlePrefixMr": "Mr.",
-    "titlePrefix": "Mrs.",
+    "titlePrefixMrs": "Mrs.",
     "name": "Name",
     "email": "Email",
     "phone": "Phone Number",
